2008-09-11  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/effect.c (ShadeImage): Accelerate using OpenMP.

2008-09-10  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/effect.c (RandomChannelThresholdImage): Accelerate using
	OpenMP.  Support individual thresholding of the color channels.
	(BlurImage): Blur was failing for PseudoClass images.  This bug
	was added on 2008-09-08.
	* magick/pixel_cache.c (AcquireOneCacheViewPixel): New function to
	return just one pixel from a cache view.

2008-09-09  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/effect.c (EnhanceImage): Accelerate using OpenMP.
	(BlurImageScanlines): Added optimizations.
	* magick/shear.c (IntegralRotateImage): Add missing progress
	indication for 90 and 270 degrees rotation.
	* www/perl.html: Fix formatting of examples.  Should address
	SourceForge issue [ 2100339 ] "Wrong format in example script on
	web page".

2008-09-08  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/effect.c (BlurImage): Accelerate using OpenMP.

2008-09-07  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/fx.c (ColorizeImage): Re-implement using pixel iterators.
	(MorphImages): Re-implement using pixel iterators.
	(OilPaintImage): Accelerate using OpenMP.
	(SolarizeImage): Re-implement using pixel iterators.

2008-09-06  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/fx.c (ConvolveImage): Accelerate using OpenMP.
	* magick/effect.c (AdaptiveThresholdImage): Accelerate using OpenMP.

2008-09-05  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/pixel_cache.c: Exhuastive study of the pixel cache code
	reveals that it is inscrutable and not implemented in a fashion
	which enables useful multi-threading.  Therefore, the cache view
	interfaces are now made OpenMP-safe via a global critical section.

2008-09-03  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/pixel_iterator.c: Reduce use of critical sections around