@@ -927,6 +927,7 @@ static void MSLStartElement(void *context,const xmlChar *name,
               if (LocaleCompare(keyword,"geometry") == 0)
               {
                 (void) GetMagickGeometry(value,&x,&y,&width,&height);
+                gravity=ForgetGravity;
                 break;
               }
               else if (LocaleCompare(keyword,"gravity") == 0)
@@ -980,6 +981,7 @@ static void MSLStartElement(void *context,const xmlChar *name,
               if (LocaleCompare(keyword,"x") == 0)
               {
                 x = atoi( value );
+                gravity=ForgetGravity;
                 break;
               }
               ThrowException(msl_info->exception,OptionError,UnrecognizedAttribute,keyword);
@@ -991,6 +993,7 @@ static void MSLStartElement(void *context,const xmlChar *name,
               if (LocaleCompare(keyword,"y") == 0)
               {
                 y = atoi( value );
+                gravity=ForgetGravity;
                 break;
               }
               ThrowException(msl_info->exception,OptionError,UnrecognizedAttribute,keyword);
