@@ -334,6 +334,7 @@ had stopped working.</li>
 <li>Resize image (-resize)</li>
 <li>Shade image (-shade)</li>
 <li>Solarize image (-solarize)</li>
+<li>Spread image (-spread)</li>
 <li>Statistics computation (identify -verbose)</li>
 <li>Threshold channel (-threshold, -operator threshold)</li>
 <li>UnsharpMaskImage (-unsharp)</li>
@@ -1043,7 +1044,7 @@ package; otherwise see <a class="reference" href="http://www.graphicsmagick.org/
 </div>
 <div class="footer">
 <hr class="footer" />
-Generated on: 2008-09-11 21:46 UTC.
+Generated on: 2008-09-12 21:38 UTC.
 
 </div>
 </body>
